# clippy-converter

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  currency-exchange-rates-api.md  plan.md  project-whitepaper.md
src/: api.rs  clipboard.rs  converter.rs  db.rs  history.rs  hotkey.rs  main.rs  models.rs  parser.rs  theme.rs  ui.rs  workers.rs
