[package]
name = "clippy-converter"
version = "0.1.0"
edition = "2026"
description = "A lightweight, background unit and currency converter with global hotkeys and local caching"
license = "MIT"
repository = "https://github.com/konyy/clippy-converter"
keywords = ["rust", "clippy", "converter", "cli"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
unnecessary_wraps = "allow"
cargo_common_metadata = "allow"
