[package]
name = "clippy-converter"
version = "0.1.0"
edition = "2024"
description = "A lightweight, background unit and currency converter with global hotkeys and local caching"
license = "MIT"
repository = "https://github.com/xKony/clippy-converter"
keywords = ["rust", "clippy", "converter", "cli"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
iced = { version = "0.14.0", features = ["tokio"] }
global-hotkey = "0.7.0"
arboard = "3.4"
enigo = "0.6.1"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redb = "4.1.0"
bincode = "1.3.3"
directories = "6.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
tray-icon = "0.19"
open = "5.3"

[dev-dependencies]
tempfile = "3.10"


[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
unnecessary_wraps = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
